@@ -8,6 +8,7 @@ hildon-libs (0.14.0) unstable; urgency=low
   * fixes NB#33217 - No borders for the custom defined color boxes in hildon color selector
   * fixes NB#37172 - Colour selector for background color shows logical string
   * fixes NB#37467 - Hildon name password dialog with autocapitalization
+  * fixes NB#34613 - 'Cancel' and 'Finish' in wrong order in Wizard widget
 
   * Merging the new color selector branch (0.13.1) with the main trunk code.
   * Maintainer change: Michael Dominic Kostrzewa <michael.kostrzewa@nokia.com>
@@ -17,6 +18,7 @@ hildon-libs (0.14.0) unstable; urgency=low
   function (documented).
   * Removing the Johan's new key handling (introduced in 0.13.1.3) for the
   time being. That requires a fix at a different level.
+  * Changing the order of the buttons in the wizard dialog
 
  -- Michael Dominic Kostrzewa <michael.kostrzewa@nokia.com>  Wed, 30 Aug 2006 14:30:00 +0300
 
